# mlir-air

./: .gitignore  .gitmodules  AIRAsyncConcurrency.md  AIRComputeModel.md  AIRConversionPasses.md  AIRDialect.md  AIRRtDialect.md  AIRTransformOps.md  AIRTransformPasses.md  CLAUDE.md  CMakeLists.txt  GEMMCaseStudy.md  LICENSE  MATMUL_CODEGEN_PIPELINE_PLAN.md  Makefile  README.md  _config.yml  aircc.md  building.md  buildingVCK5000.md  config.sh  pyproject.toml  requirements.txt  setup.py  testing.md  vck190_building_platform.md  vck190_microblaze_firmware.md
cmake/modules/: AIRConfig.cmake.in  AddAIR.cmake  CMakeLists.txt  toolchain_aarch64.cmake  toolchain_crosscomp_arm.cmake  toolchain_x86.cmake  toolchain_x86_64.cmake
mlir/: CMakeLists.txt
mlir/include/: CMakeLists.txt
mlir/lib/: CMakeLists.txt  InitAll.cpp
mlir/python/: AIRMLIRModule.cpp  AIRRunnerModule.cpp  AIRRunnerModule.h  CMakeLists.txt
mlir/test/: CMakeLists.txt  MyTest.cpp  lit.cfg.py  lit.site.cfg.py.in
programming_examples/: CMakeLists.txt  README.md  generate_readme.py  index.md  lit.cfg.py  lit.site.cfg.py.in  makefile-common  utils.py
programming_examples/2d_shim_dma/: 2d_shim_dma.py  Makefile  README.md  run_makefile.lit
programming_examples/attention_decode/: Makefile  attn_decode_npu2.cc  attn_decode_npu2.py  run_makefile_peano_attn_decode.lit  run_makefile_peano_attn_decode_elf.lit  test_elf_npu2_decode.cpp  test_xclbin_decode.cpp
programming_examples/average_pool/: Makefile  average_pool.py
programming_examples/axpy/: Makefile  axpy.py
programming_examples/bottleneck/: Makefile  bottleneck.py  bottleneck_mlir.py  conv2dk1.cc  conv2dk1_skip.cc  conv2dk3.cc  run_npu1_makefile_chess.lit  run_npu1_makefile_peano.lit  run_npu1_makefile_peano_mlir.lit  run_npu2_makefile_peano_mlir.lit
programming_examples/cascade_reduction/: Makefile  cascade_reduction.py  run_makefile_peano.lit
programming_examples/channel-communication-patterns/: README.md  common.py
programming_examples/channel_examples/: README.md  common.py
programming_examples/conditional_branching/: Makefile  run_makefile.lit  run_makefile_chess.lit  run_makefile_peano.lit  run_makefile_peano_elf.lit  single_core.py
programming_examples/conv2d/: Makefile  conv2d.py
programming_examples/conv2d_14x14/: Makefile  conv2d_14x14.py  run_npu1_makefile_peano.lit  run_npu2_makefile_peano.lit  test.cpp
programming_examples/data_transfer_transpose/: README.md  common.py
programming_examples/decode_ffn_swiglu/: Makefile  matvec_int4_swiglu_rms.py  matvec_swiglu_rms.py  run_int4_npu2_peano.lit  run_npu2_peano.lit
programming_examples/dequant_awq/: Makefile  dequant.cc  dequant_awq.py  run_makefile_peano_elf.lit  run_makefile_peano_elf_inline.lit  run_makefile_peano_inline.lit  run_makefile_peano_npu1.lit  test_dequant.cpp
programming_examples/eltwise_add/: Makefile  eltwise_add.py  run_makefile_chess.lit  run_makefile_peano.lit  run_makefile_peano_npu2.lit  test.cpp
programming_examples/eltwise_add_with_l2/: Makefile  eltwise_add.py
programming_examples/gelu/: Makefile  gelu.py  run_makefile_peano.lit
programming_examples/herd_dataflow/: Makefile  README.md  air.mlir  extern_func.cc  run.py  run_makefile_peano_mlir_source.lit  run_makefile_peano_python_source.lit  run_npu1_makefile_peano_mlir_source.lit  run_npu1_makefile_peano_mlir_source_elf.lit  run_npu1_makefile_peano_python_source.lit  run_npu1_makefile_peano_python_source_elf.lit  run_npu2_makefile_peano_mlir_source.lit  run_npu2_makefile_peano_mlir_source_elf.lit  run_npu2_makefile_peano_python_source.lit  run_npu2_makefile_peano_python_source_elf.lit
programming_examples/kernel_registry/: .gitignore  README.md  registry_lookup.py  supported_kernels.md
programming_examples/layer_norm/: Makefile  layer_norm.py
programming_examples/leaky_relu/: Makefile  leaky_relu.py
programming_examples/llama2_mha/: Makefile  attn_decode_npu2.cc  attn_decode_npu2.py  mha.cc  mha.py  mha_dk64.cc  mha_dk64.py  mha_gqa.cc  mha_gqa.py  mha_gqa_multicol.py  mha_npu2.cc  mha_npu2.py  run_makefile_peano.lit  run_makefile_peano_attn_decode_post_prefill.lit  test_elf_npu2_decode.cpp  test_xclbin_decode.cpp  zero.cc
programming_examples/llama2_rope/: Makefile  rope.cc  rope.py
programming_examples/llama32_1b/: .gitignore  ARCHITECTURE.md  Makefile  README.md  awq_repacker.py  cpu_prefill.py  llama32_1b_cpu_helpers.py  llama32_1b_decode.py  llama32_1b_inference.py  llama32_1b_prefill.py  llama32_1b_reference.py  llama32_1b_weights.py  run_npu2_compile.lit  run_npu2_makefile_peano_synthetic_verify.lit  run_npu2_verify.lit
programming_examples/llama32_1b_int4/: .gitignore  Makefile  README.md  awq_pack.py  awq_repacker.py  gemm_builder.py  llama32_1b_int4_decode.py  llama32_1b_int4_prefill.py  run_npu2_verify.lit  verify_adapter.py  verify_prefill_int4.py
programming_examples/llama_kernel_builder/: cache.py  external_kernels.py
programming_examples/llm_verify/: comparators.py  verify_runner.py
programming_examples/llms/: .gitignore  README.md  hf_models.txt
programming_examples/matrix_multiply/: README.md
programming_examples/matrix_scalar_add/: Makefile  README.md  common.py  data_config.py  manual_run.py  manual_transforms.py  matrix_scalar_add.py  matrix_scalar_add_channel.py  matrix_scalar_add_herd.py  matrix_scalar_add_implicit.py  matrix_scalar_add_launch.py  matrix_scalar_add_segment.py  multi_core_channel.py  multi_core_dma.py  multi_launch_channel.py  run.py  run_makefile.lit  single_core_channel.py  single_core_dma.py
programming_examples/multi_segment/: README.md
programming_examples/passthrough/: README.md  common.py
programming_examples/passthrough_channel/: passthrough_channel.py  run.py
programming_examples/passthrough_dma/: passthrough_dma.py  run.py
python/: AIRMLIRModule.cpp  AirHostModule.cpp  AirModule.cpp  CMakeLists.txt  ILP_solution.py
python_bindings/: CMakeLists.txt  pyproject.toml  setup.py
runtime_lib/: CMakeLists.txt
test/: CMakeLists.txt  RocmRuntimeWrappers.cpp  config.make  lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt
(+3277 files in other folders)
